Added about me section

--- a/app/views/pages/_hero.html.erb
+++ b/app/views/pages/_hero.html.erb
@@ -1,15 +1,17 @@
-<div class="h-[70vh] flex flex-row items-center">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
+
+
+<div class="h-[70vh] flex items-center justify-center">
 
   <div class="pr-4">
-    <h1 class="text-3xl"> Hey, I'm Jacek 👋</h1>
-    <h1 class="text-2xl pt-2">
-      I'm an aspiring full-stack developer that just graduated from Le Wagon Full-Time bootcamp.
-      This site will be used to writes about code, design, and more.
-    </h1>
+    <h1 class="text-2xl"> Hi, my</h1>
+    <p class="text-4xl my-3"> name is <strong>Jacek</strong>.</p>
+
+    <h1 class="text-1xl pt-2">
+      I'm an aspiring full-stack developer that just graduated from Le Wagon</h1>
+      <p>This site will be used to write about code, design, and more.<p>
     <%= render 'pages/skills' %>
   </div>
 
-  <div>
-    <img class="h-auto max-w-full rounded-full" src="https://media.licdn.com/dms/image/C4D03AQEej6OdNmDLdA/profile-displayphoto-shrink_800_800/0/1542553500451?e=1716422400&v=beta&t=sX9hPtY8H9khT7nBnddBXfOY91nxXKh4T0dBpGTeXcs">
-  </div>
+
 </div>
