--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,31 +3,11 @@
 </section>
 
 <section class="socials">
-  <h2 class="py-3 text-2xl flex justify-center">Connect with me!</h2>
   <div class="my-4 flex justify-center">
     <%= render 'pages/socials' %>
   </div>
 </section>
 
 <section class="about-me">
-  <h2 class="text-2xl">A bit more about me..</h2>
-  <p class="py-2">
-    With a background in business strategy, data analysis, and cryptocurrency exchange operations,
-    I am now poised to transition into a product management role.
-    With a proven track record of driving growth and implementing innovative strategies at bitFlyer Europe S.A.,
-    I bring a unique blend of strategic vision, analytical prowess, and leadership skills to the table.
-    Leveraging my experience in market research, partnership development, and team management,
-    I am eager to apply my insights and expertise to deliver impactful product solutions that drive user engagement
-    and business success
-    </p>
-    <p>
-      Prior to my coding journey,
-      I was working in the cryptocurrency space as a Business Strategy Manager for the largest cryptocurrency Exchange in Japan
-    </p>
-
-       <button class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
-      <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-        Read more
-      </span>
-    </button>
+  <%= render 'about'%>
 </section>
