--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-2xl">List of the projects I've worked on: </h1>
+<h1 class="text-2xl">Each Project is a unique piece of development </h1>
 
 <% @projects.each do |project| %>
   <%= render 'project_card' %>
