--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -43,13 +43,7 @@
           class="list-style-none me-auto flex flex-col ps-0 lg:flex-row"
           data-twe-navbar-nav-ref>
           <li class="mb-4 lg:mb-0 lg:pe-2" data-twe-nav-item-ref>
-            <!-- Dashboard link -->
-            <a
-              class="text-neutral-500 hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 lg:px-2 [&.active]:text-black/90 dark:[&.active]:text-zinc-400"
-              href="#"
-              data-twe-nav-link-ref
-              >Home</a
-            >
+              <%= link_to "Home", root_path, class:"text-neutral-500 hover:text-neutral-700 focus:text-neutral-700 disabled:text-black/30 dark:text-neutral-200 dark:hover:text-neutral-300 dark:focus:text-neutral-300 lg:px-2 [&.active]:text-black/90 dark:[&.active]:text-neutral-400" %>
           </li>
           <!-- Team link -->
           <li class="mb-4 lg:mb-0 lg:pe-2" data-twe-nav-item-ref>
