--- a/app/views/pages/_socials.html.erb
+++ b/app/views/pages/_socials.html.erb
@@ -1,11 +1,24 @@
 <div class="gap-5">
 
-  <%= link_to "https://github.com/JBST93", target: :_blank, class: "mb-2 inline-block rounded bg-[#333] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg" do %>
-  <%= "Github"%>
+  <%= link_to "https://github.com/JBST93", target: :_blank,
+   class: "mb-2 inline-block rounded bg-[#333] px-6 py-2.5 text-xs
+    font-medium uppercase leading-normal text-white shadow-md transition duration-150
+    ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none
+    focus:ring-0 active:shadow-lg
+    dark:text-black dark:bg-white" do %>
+
+    <i class="fa-brands fa-github"></i>
+    <%= "Github" %>
+
   <% end %>
 
-  <%= link_to "https://www.linkedin.com/in/bastinjacek/", target: :_blank, class:"mb-2 inline-block rounded bg-[#0077b5] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg" do %>
-  <%= "LinkedIn"%>
+  <%= link_to "https://www.linkedin.com/in/bastinjacek/", target: :_blank,
+    class:"mb-2 inline-block rounded bg-[#0077b5] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white
+     shadow-md transition duration-150 ease-in-out hover:shadow-lg
+    focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg" do %>
+
+    <%= "LinkedIn" %>
+
   <% end %>
 
 
